k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: journal-app
  labels:
    name: journal-app
    environment: production
