k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-api
  namespace: journal-app
  labels:
    app: journal-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: journal-api
