k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal-api-ingress
  namespace: journal-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: journal-api
            port:
              number: 80
